samples/_failures_safe/1761788964_6defbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77cc125e.c: In function ‘main’:
./samples/SAFE/__tmp_77cc125e.c:157:16: error: expected identifier or ‘(’ at end of input
  157 |         struct compression
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_77cc125e.c:157:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77cc125e.c:157:16: error: expected declaration or statement at end of input
